--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -22,10 +22,10 @@
           Empresa
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Cadastro de Empresa</a>
+          <a class="dropdown-item" href="{% url 'cadastrar_empresa' %}">Cadastro de Empresa</a>
           <a class="dropdown-item" href="#">Listar Empresa</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Cadastro de Setor</a>
+          <a class="dropdown-item" href="{% url "cadastrar_setor" %}">Cadastro de Setor</a>
           <a class="dropdown-item" href="#">Listar Setor</a>
         </div>
       </li>
