--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -48,8 +48,8 @@
           <a class="dropdown-item" href="#">Computador</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Tipo Equipamento</a>
-          <a class="dropdown-item" href="#">Marca</a>
-          <a class="dropdown-item" href="#">Software</a>
+          <a class="dropdown-item" href="{% url "cadastrar_marca" %}">Marca</a>
+          <a class="dropdown-item" href="{% url "cadastrar_software" %}">Software</a>
           <a class="dropdown-item" href="#">Licença de Software</a>
         </div>
       </li>
