--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -47,10 +47,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Computador</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Tipo Equipamento</a>
           <a class="dropdown-item" href="{% url "cadastrar_marca" %}">Marca</a>
           <a class="dropdown-item" href="{% url "cadastrar_software" %}">Software</a>
-          <a class="dropdown-item" href="#">Licença de Software</a>
+          <a class="dropdown-item" href="{% url "cadastrar_sistema_operacional" %}">Sistema Operacional</a>
         </div>
       </li>
       <li class="nav-item">
