--- a/equipamentos/templates/cadastrar_software.html
+++ b/equipamentos/templates/cadastrar_software.html
@@ -14,6 +14,7 @@
     <div class="container">
         <br>
         <br>
+        <p class="h2">Cadastro de Software</p>
         {% if messages %}
             {% for message in messages %}
                 <section class="alert {{message.tags}}">
