--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -44,7 +44,7 @@
           Equipamentos
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Computador</a>
+          <a class="dropdown-item" href="{% url "cadastrar_computador" %}">Computador</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url "cadastrar_marca" %}">Marca</a>
           <a class="dropdown-item" href="{% url "cadastrar_software" %}">Software</a>
@@ -56,7 +56,8 @@
           Ocorrências
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Desligar Usuário</a>
+          <a class="dropdown-item" href="#">Inativar Usuário</a>
+          <a class="dropdown-item" href="#">Trocar Usuário de Setor</a>          
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Transferir Equipamento</a>
           <a class="dropdown-item" href="#">Inativar Equipamento</a>
