--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -26,7 +26,7 @@
           <a class="dropdown-item" href="#">Listar Empresa</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url "cadastrar_setor" %}">Cadastro de Setor</a>
-          <a class="dropdown-item" href="#">Listar Setor</a>
+          <a class="dropdown-item" href="{% url "listar_setores" %}">Listar Setor</a>
         </div>
       </li>
 
