--- a/empresa/templates/listar_empresas.html
+++ b/empresa/templates/listar_empresas.html
@@ -7,54 +7,30 @@
 
 {% endblock 'head' %}
 
-
 {% block 'body' %}
     {% include "partials/barra_navegacao.html" %}
-    <br><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <form action="{% url 'listar_empresas' %}" method="GET">
-                <label>Empresa</label>
-                <input type="text" name="empresa" class="form-control" placeholder="Busque por uma empresa em específico">
-            </div>
-            <div class="col-md">
-                <br>
-                <input type="submit" value="filtrar" class="btn btn-outline-primary">
-                </form>
-            </div>
-        </div>
-
-    </div>
+    <br>
     <br>
     <div class="container dark-color container_empresas">
         <table class="table">
             <thead >
               <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Nome</th>
-                <th class="cabecalho" scope="col">Percentual captado</th>
-                <th class="cabecalho" scope="col">Status</th>
-                <th class="cabecalho" scope="col">Ação</th>
+                <th class="cabecalho" scope="col">Id</th>
+                <th class="cabecalho" scope="col">Empresa</th>                
+                <th class="cabecalho" scope="col">CNPJ</th>
+                <th class="cabecalho" scope="col">Ação</th>                
               </tr>
             </thead>
             <tbody>
                 {% for empresa in empresas %}
                     <tr class="linha">
-                        <td class="linha">{{ empresa.nome }}</td>
-                        <td class="linha">
-                            <div class="progress">
-                                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </td>
-                        <td class="linha">{{ empresa.status }}</td>
-                        <td class="linha"><a href="{% url 'empresa' empresa.id %}" class="btn btn-indigo-normal">Abrir</a></td>
+                        <td class="linha">{{ empresa.id }}</td>
+                        <td class="linha">{{ empresa.nome_empresa }}</td>
+                        <td class="linha">{{ empresa.cnpj }}</td>
+                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
                     </tr>
                 {% endfor %}
-                
-                    
-              
             </tbody>
           </table>
-
     </div>
 {% endblock 'body' %}
