--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -69,7 +69,7 @@
           Ocorrências
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Inativar Usuário</a>
+          <a class="dropdown-item" href="{% url "inativar_usuario" %}">Inativar Usuário</a>
           <a class="dropdown-item" href="#">Trocar Usuário de Setor</a>          
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Transferir Equipamento</a>
