Criado view atualizar_setor_usuario

--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -69,11 +69,9 @@
           Ocorrências
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="{% url "inativar_usuario" %}">Inativar Usuário</a>
-          <a class="dropdown-item" href="#">Trocar Usuário de Setor</a>          
+          <a class="dropdown-item" href="{% url "ocorrencias_usuarios" %}">Usuários</a>      
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Transferir Equipamento</a>
-          <a class="dropdown-item" href="#">Inativar Equipamento</a>
+          <a class="dropdown-item" href="{% url "ocorrencias_equipamentos" %}">Equipamentos</a>  
         </div>
       </li>
       <!-- MENU SAIR -->           
