Criando listagem de ocorrência de usuários

--- a/ocorrencias/templates/ocorrencias_usuarios.html
+++ b/ocorrencias/templates/ocorrencias_usuarios.html
@@ -20,6 +20,12 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="{% url "atualizar_setor_usuario" %}">Atualizar Setor de Usuário</a>    
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="#"></a>    
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="{% url "listar_ocorrencias_usuarios" %}">Listar Ocorrências de Usuários</a>    
+            </li>
         </ul>
     </div>
 {% endblock 'body' %}
